# k8s-cicd-app

./: .gitignore  Dockerfile  Makefile  README.md  build.yaml  deploy.yaml  pyproject.toml
app/: main.py  utils.py
k8s/: chart.yaml  values.yaml
k8s/templates/: deployment.yaml  service.yaml
tests/: test_main.py  test_utils.py
