[tool.poetry]
name = "app"
version = "0.1.0"
description = "Receives events about Civilization turns and sends notifications to Telegram."
authors = ["Marcos-Miranda <markinn_mn@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["all"], version = "^0.95.1"}
requests = "^2.30.0"
google-cloud-firestore = "^2.11.1"
google-cloud-secret-manager = "^2.16.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
server = "app.main:main"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.firestore"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--disable-warnings --cov-report term-missing --cov=app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
